fixed mistakes on tablet

--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -29,7 +29,7 @@
     @include onTablet {
       grid-template-columns: repeat(6, min-content);
       justify-content: space-between;
-      gap: 40px;
+      gap: 20px;
       white-space: nowrap;
     }
 
@@ -73,8 +73,9 @@
     font-family: "Poppins", sans-serif;
     @extend %actionsPhrase;
     background-color: transparent;
-    padding-bottom: 2px;
+    padding: 2px 0;
     border: $under-line solid transparent;
+    border-width: 0 0 $under-line;
 
     transition: border-color $animations-during;
 
